@@ -2,10 +2,11 @@
 Hash: SHA256
 
 DIST draper-0.14.0.gem 79360 SHA256 8bea54981f04c6b27ac48f74ee396768fc366d4ea1eb39a45022faa6456fba27 SHA512 7838456dd3c810057b7500f5e60a3d814c05586b625ab4ac624a33f750ce8ae94f227f465c6a0155120e6000dad3bb033f4dccf663dc073b1140c8afb78635e0 WHIRLPOOL 136ab85bc22a97ccdca184e8e0b7a8ed171ba6e46d4cc96d24b20fc71e53a511f32df4b52f9b27a8b79370292d49a2d1a84d3826edece00500b37109d8476cda
+DIST draper-0.17.0.gem 81408 SHA256 e2cdcba4c59620afc15e16c5fd2462a150296bdf38f5f41a4333c4507bd6add3 SHA512 ffbb5eb8ff24296730d63002c919e2773260ff8a3222cf3d94a0c5e530a6855ceabc5d69eab490d9a47a6d6420ee9741f72b957ef1601e362cf242142ed82d59 WHIRLPOOL d62770f6183de374ae090e68eada8952488e17907fa65399fb3aa9da3ef442f536d1c76ff328e3c4461acd09fded07cab6496172f40990c453915d00bd0b7761
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iF4EAREIAAYFAlBEe6MACgkQiIP6VqMIqNd9AgD+J9AJc/ALj/zOk1wetJp0peQe
-GxSr6msJMorxk04RtcMA+gOrNVMTVnUTKHzYr1tH3vS8obxMFB6PJLqcDStKylbi
-=9g5G
+iF4EAREIAAYFAlBNqLQACgkQiIP6VqMIqNcC2QD+Lzid1dUP0fz97Y87gPAtmqOa
+LOY3kwJ84Yjn0zftOf4A/2wqmJTJx69dSbCYsgil9SCKJWW6O5C3i5V8HUCadn8f
+=G0nS
 -----END PGP SIGNATURE-----
